[Fix] block title broken on safari

--- a/src/assets/scss/blocktitle.scss
+++ b/src/assets/scss/blocktitle.scss
@@ -20,6 +20,7 @@
 div.block.title {
   display: flex;
   justify-content: center;
+  align-items: center;
 
   @include bookTitleFontsize;
   @include fontFamily-black;
@@ -32,25 +33,8 @@ div.block.title {
   position: relative;
 
   span.text {
-    // display: contents;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-
-    @media screen and (max-width: $max-width-medium-0) {
-    }
-    @media screen and (max-width: $max-width-medium-1) {
-    }
-    @media screen and (max-width: $max-width-small-0) {
-      position: relative;
-      top: 0;
-      left: 0;
-      transform: translateX(0) translateY(0);
-    }
-    @media screen and (max-width: $max-width-small-1) {
-    }
-
+    display: contents;
+  
     &::before,
     &::after {
       display: inline-block;
